Bug 518493 - Not all strings respect BinaryUnitDialect setting
Summary: Not all strings respect BinaryUnitDialect setting
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Disks & Devices widget (other bugs)
Version First Reported In: 6.6.80
Platform: KDE Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-04-03 16:13 UTC by Nate Graham
Modified: 2026-06-04 18:43 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Frameworks 6.27
Sentry Crash Report:


Attachments
Mixture of IEC and SI units (26.34 KB, image/png)
2026-04-03 16:13 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2026-04-03 16:13:34 UTC
Created attachment 191248 [details]
Mixture of IEC and SI units

STEPS TO REPRODUCE
1. System Settings > Region & Language > Data and Storage Sizes > Metric System (SI) > Click "Apply"
2. Restart the system or plasmashell for good measure
3. Plug in a disk > mount it
4. Open the Disks & Devices popup again

OBSERVED RESULT
Main label is always expressed using IEC units; secondary label respects the value of BinaryUnitDialect and uses SI units

EXPECTED RESULT
Both labels use SI units

SOFTWARE/OS VERSIONS
Operating System: KDE Linux 2026-03-30
KDE Plasma Version: 6.6.80
KDE Frameworks Version: 6.25.0
Qt Version: 6.11.0
Kernel Version: 6.19.9-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7840U w/ Radeon™ 780M Graphics
Memory: 17 GB of RAM (16.0 GB usable)
Graphics Processor: AMD Radeon 780M Graphics
Comment 1 Bug Janitor Service 2026-06-04 11:49:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/solid/-/merge_requests/256
Comment 2 Nate Graham 2026-06-04 18:42:49 UTC
Git commit 0a48f09d4b2b2c69180b43ac769bc15205013d32 by Nate Graham, on behalf of Tobias Fella.
Committed on 04/06/2026 at 18:42.
Pushed by ngraham into branch 'master'.

Use globally-configured storage size units for labeling disks

Unfortunately this involves copying code from KCoreAddons, since Solid
is tier 1 so we can't depend on it.
FIXED-IN: 6.27

M  +145  -38   src/solid/devices/backends/udisks2/udisksdevice.cpp

https://invent.kde.org/frameworks/solid/-/commit/0a48f09d4b2b2c69180b43ac769bc15205013d32