Use globally-configured storage size units for labeling disks

Unfortunately this involves copying code from KCoreAddons, since Solid
is tier 1 so we can't depend on it.

BUG: 518493
FIXED-IN: 6.27